--- a/travel_advisories.ipynb
+++ b/travel_advisories.ipynb
@@ -579,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 236,
    "metadata": {},
    "outputs": [
     {
@@ -593,11 +593,11 @@
          "colorscale": [
           [
            0,
-           "#ffd7b5"
+           "#003875"
           ],
           [
            1,
-           "#ffd7b5"
+           "#003875"
           ]
          ],
          "geo": "geo",
@@ -866,11 +866,11 @@
          "colorscale": [
           [
            0,
-           "#ffb38a"
+           "#ffcc66"
           ],
           [
            1,
-           "#ffb38a"
+           "#ffcc66"
           ]
          ],
          "geo": "geo",
@@ -1064,11 +1064,11 @@
          "colorscale": [
           [
            0,
-           "#ff9248"
+           "#ff9900"
           ],
           [
            1,
-           "#ff9248"
+           "#ff9900"
           ]
          ],
          "geo": "geo",
@@ -1220,11 +1220,11 @@
          "colorscale": [
           [
            0,
-           "#ff6700"
+           "#ff0000"
           ],
           [
            1,
-           "#ff6700"
+           "#ff0000"
           ]
          ],
          "geo": "geo",
@@ -2185,7 +2185,7 @@
     }
    ],
    "source": [
-    "fig = px.choropleth(df, locations=\"CODE\", color=\"Level\", hover_name=\"Country\", color_discrete_sequence=[\"#ffd7b5\", \"#ffb38a\", \"#ff9248\", \"#ff6700\", \"black\"])\n",
+    "fig = px.choropleth(df, locations=\"CODE\", color=\"Level\", hover_name=\"Country\", color_discrete_sequence=[\"#003875\", \"#ffcc66\", \"#ff9900\", \"#ff0000\", \"black\"])\n",
     "fig.show()"
    ]
   },
