--- a/travel_advisories.ipynb
+++ b/travel_advisories.ipynb
@@ -579,9 +579,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 237,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using matplotlib backend: Qt5Agg\n"
+     ]
+    },
     {
      "data": {
       "application/vnd.plotly.v1+json": {
@@ -2185,6 +2192,7 @@
     }
    ],
    "source": [
+    "%matplotlib\n",
     "fig = px.choropleth(df, locations=\"CODE\", color=\"Level\", hover_name=\"Country\", color_discrete_sequence=[\"#003875\", \"#ffcc66\", \"#ff9900\", \"#ff0000\", \"black\"])\n",
     "fig.show()"
    ]
