Updated README and small changes

--- a/travel_advisories.ipynb
+++ b/travel_advisories.ipynb
@@ -579,14 +579,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 238,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using matplotlib backend: Qt5Agg\n"
+      "Warning: Cannot change to a different GUI toolkit: notebook. Using qt instead.\n"
      ]
     },
     {
@@ -2192,9 +2192,9 @@
     }
    ],
    "source": [
-    "%matplotlib\n",
+    "%matplotlib notebook\n",
     "fig = px.choropleth(df, locations=\"CODE\", color=\"Level\", hover_name=\"Country\", color_discrete_sequence=[\"#003875\", \"#ffcc66\", \"#ff9900\", \"#ff0000\", \"black\"])\n",
-    "fig.show()"
+    "fig.show(\"png\")"
    ]
   },
   {
