--- a/travel_advisories.ipynb
+++ b/travel_advisories.ipynb
@@ -579,16 +579,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 243,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Warning: Cannot change to a different GUI toolkit: notebook. Using qt instead.\n"
-     ]
-    },
     {
      "data": {
       "application/vnd.plotly.v1+json": {
@@ -2192,17 +2185,18 @@
     }
    ],
    "source": [
-    "%matplotlib notebook\n",
     "fig = px.choropleth(df, locations=\"CODE\", color=\"Level\", hover_name=\"Country\", color_discrete_sequence=[\"#003875\", \"#ffcc66\", \"#ff9900\", \"#ff0000\", \"black\"])\n",
-    "fig.show(\"png\")"
+    "fig.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 244,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "fig.write_html(\"demo.html\")"
+   ]
   }
  ],
  "metadata": {
