--- a/travel_advisories.ipynb
+++ b/travel_advisories.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +164,7 @@
        "[212 rows x 3 columns]"
       ]
      },
-     "execution_count": 222,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +330,7 @@
        "[212 rows x 3 columns]"
       ]
      },
-     "execution_count": 227,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -549,7 +549,7 @@
        "[212 rows x 4 columns]"
       ]
      },
-     "execution_count": 232,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -561,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -570,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -579,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1338,6 +1338,16 @@
         }
        ],
        "layout": {
+        "annotations": [
+         {
+          "showarrow": false,
+          "text": "Source: <a href=\"https://www.worldometers.info/coronavirus/\">                #Worldometer</a>",
+          "x": 0.5,
+          "xref": "paper",
+          "y": 0,
+          "yref": "paper"
+         }
+        ],
         "geo": {
          "center": {},
          "domain": {
@@ -2176,6 +2186,9 @@
            "zerolinewidth": 2
           }
          }
+        },
+        "title": {
+         "text": "Travel Advisories as of 2022-05-01"
         }
        }
       }
@@ -2186,12 +2199,14 @@
    ],
    "source": [
     "fig = px.choropleth(df, locations=\"CODE\", color=\"Level\", hover_name=\"Country\", color_discrete_sequence=[\"#003875\", \"#ffcc66\", \"#ff9900\", \"#ff0000\", \"black\"])\n",
+    "fig.update_layout(title_text='Travel Advisories as of {}'.format(today), annotations=[dict(x=0.5,y=-0.05,xref='paper',yref='paper',text='Source: <a href=\"https://travel.state.gov/content/travel/en/traveladvisories/traveladvisories.html/\">\\\n",
+    "                Department of State Travel</a>', showarrow=False)])\n",
     "fig.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
